force-app/main/default/objects/Event__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <label>Attendees</label>
    <summaryFilterItems>
        <field>Invitee__c.Status__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Invitee__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>