force-app/main/default/objects/Event__c/fields/Invitees__c.field-meta.xml
<CustomField>
    <fullName>Invitees__c</fullName>
    <label>Invitees</label>
    <summaryForeignKey>Invitee__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>