force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_Status__c</columns>
    <columns>Invitees__c</columns>
    <columns>Attendees__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>