force-app/main/default/objects/Event__c/listViews/Closed.listView-meta.xml
<ListView>
    <fullName>Closed</fullName>
    <columns>NAME</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_Status__c</columns>
    <columns>Invitees__c</columns>
    <columns>Attendees__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed</label>
</ListView>