force-app/main/default/objects/Event__c/listViews/Open.listView-meta.xml
<ListView>
    <fullName>Open</fullName>
    <columns>NAME</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_Status__c</columns>
    <columns>Invitees__c</columns>
    <columns>Attendees__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open</label>
</ListView>